# symbolicq

./: .gitignore  API.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: bell.py  csv_and_zip.py
manual/: circuits.en.md  circuits.ko.md  client-reference.en.md  client-reference.md  configuration.en.md  configuration.ko.md  formats.en.md  formats.md  index.en.md  index.ko.md  index.md  jobs-and-results.en.md  jobs-and-results.ko.md  troubleshooting.ko.md  troubleshooting.md
src/symbolicq/: __init__.py  backend.py  circuit.py  client.py  config.py  exceptions.py  formats.py  gates.py  job.py  result.py
tests/: test_backend.py  test_circuit.py  test_config.py  test_formats.py  test_result.py
